--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h1{
 }
 
 img{
-	border: dotted 4px white;
+	border: solid 4px white;
 }
 
 #npara{
@@ -41,7 +41,7 @@ img{
 }
 
 #footer{
-
+background: url("inner-banner-img-6-1-1140x386.jpg");
 background-color: purple;
 padding: 50px;
 }
