--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ img{
 	color: white;
 	font-size: 30px;
 	font-family: verdana;
-	padding-top: 30px;
+	transform: translateY(4px);
 }
 
 .redColor{
