--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ img{
 	color: white;
 	font-size: 30px;
 	font-family: verdana;
-	transform: translateY(4px);
+	margin-bottom: 30px;
 }
 
 .redColor{
