--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ text-align: center;
 }
 
 #nheader{
-	background: url("inner-banner-img-4-1140x386.jpg")purple;
+	background: url("inner-banner-img-4-1140x386.jpg") fixed purple;
 	padding: 25px;
 	height: 250px;
 }
@@ -24,7 +24,7 @@ img{
 }
 
 #npara{
-	background: url("inner-banner-img-1-1140x386.jpg") blue; 
+	background: url("inner-banner-img-1-1140x386.jpg") fixed blue; 
 	height: 350px;
 	padding: 30px;
 }
@@ -42,7 +42,7 @@ img{
 }
 
 #footer{
-background: url("inner-banner-img-6-1-1140x386.jpg");
+background: url("inner-banner-img-6-1-1140x386.jpg") fixed;
 background-color: purple;
 padding: 50px;
 height: 100px;
