--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@ img{
 #footer{
 background: url("inner-banner-img-6-1-1140x386.jpg");
 background-color: purple;
-padding: 50px;
+padding-left: 50px;
 height: 100px;
-width: 100%;
 }
