--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ img{
 }
 
 #npara{
-	background: url("inner-banner-img-1-1140x386.jpg") fixed blue; 
+	background: url("footer-bg-1140x333.jpg") fixed blue; 
 	height: 350px;
 	padding: 30px;
 }
@@ -42,7 +42,7 @@ img{
 }
 
 #footer{
-background: url("inner-banner-img-6-1-1140x386.jpg");
+background: url("fresh-meat-delivery2.jpg");
 background-color: purple;
 padding: 50px;
 height: 100px;
