--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ img{
 }
 
 #npara{
-	background: url("fresh-meat-delivery2.jpg") fixed blue; 
+	background: f39c12; 
 	height: 350px;
 	padding: 30px;
 }
@@ -42,8 +42,7 @@ img{
 }
 
 #footer{
-background: url("footer-bg-1140x333.jpg");
-background-color: purple;
+background-color: e67e22;
 padding: 50px;
 height: 100px;
 }
