--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ img{
 }
 
 #npara{
-	background: f39c12; 
+	background: #f39c12; 
 	height: 350px;
 	padding: 30px;
 }
@@ -42,7 +42,7 @@ img{
 }
 
 #footer{
-background-color: e67e22;
+background-color: #e67e22;
 padding: 50px;
 height: 100px;
 }
